# AI-POWERED-APP-WITH-WHATSAPP-ASSISTANT-

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  voice.py
api/: index.py
scripts/: seed_admin.py  seed_hotels.py  seed_restaurant.py
src/: config.py  conversations.db-shm  conversations.db-wal  database.py  main.py
src/crud/: __init__.py  admin.py  booking.py  conversation.py  customer.py  hotel.py  room.py
src/endpoints/: admin.py  bookings.py  calling.py  chat.py  customers.py  hotels.py  notifications.py  users.py  whatsapp.py
src/models/: admin.py  booking.py  common.py  conversation.py  customer.py  hotel.py  room.py  whatsapp.py
src/services/: push_notifications.py  voice_whatsapp.py  wa_calling.py  webhook_handler.py  whatsapp.py
src/services/ai_services/: __init__.py  agent.py  context.py  part1_groq_client.py  part2_stt.py  part3_agent.py  part4_tts.py  part5_pipeline.py  tools.py  tts_openai.py  upstash_memory.py
